Cards logo and button spacing issues

--- a/app/assets/styles/modules/_affiliatePage.scss
+++ b/app/assets/styles/modules/_affiliatePage.scss
@@ -189,7 +189,7 @@
         text-align: center;
         font-family: 'Lato', sans-serif;
         width: 80%;
-        margin: 40px auto;
+        margin: 10px auto;
       }
       
       .btn-try a {
